# ChessQDL

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  main.cpp
docs/: Doxyfile
include/: cxxopts.hpp
include/ChessQDL/: chessqdl.hpp
libs/cxxopts/include/: cxxopts.hpp
scripts/: split.sh
src/: CMakeLists.txt  argparser.hpp  board.cpp  board.h  game.cpp  game.h  main.cpp  piece.cpp  piece.h  tile.cpp  tile.h
src/Engine/: bitboard.cpp  bitboard.h  bitboard.hpp  chessqdl.cpp  chessqdl.h  const.h  const.hpp  engine.cpp  engine.h  engine.hpp  movegen.cpp  movegen.h  movegen.hpp  utils.cpp  utils.h  utils.hpp
src/GUI/: board.h  game.cpp  game.h  piece.cpp  piece.h  tile.cpp
tests/: CMakeLists.txt  CMakeLists.txt.in  bitboard_tests.cpp  movegen_tests.cpp
